refactor: directory restructuring
